--- a/inst/GPML/chap3.Rmd
+++ b/inst/GPML/chap3.Rmd
@@ -46,14 +46,24 @@ ggplot(data, aes(x, y)) +
 model <- glm(y ~ x - 1, family="binomial") # doesn't work
 
 # GP classification
-f <- rep(0, length(x)) # initialize to 0 
-
-log.lik <- function(f, y) {    # function to take hessian of
-    dbinom(y, 1, f, log=TRUE)
+K <- function(X.p, X.q=NULL) {
+    sigma <- exp(-0.5 * rdist(X.p, X.q) ^ 2)
+    return(sigma)
 }
+
+f <- rep(0, length(x)) # initialize to 0 
+K <- K(x)              # calcualte K
 
 # repeat until convergence
 while (TRUE) {
     # construct W (- Hessian of logistic log likelihood)
+    W <- diag(-f * (1 - f))
+    # take square root of W for calculating B
+    # can just use sqrt since W is diagonal
+    W.sqrt <- sqrt(W) 
+    B <- diag(1, nrow(K)) + W.sqrt %*% K %*% W.sqrt
+    L <- chol(B)
+    b <- W %*% f
+
 }
 ```
