--- a/inst/GPML/chap3.Rmd
+++ b/inst/GPML/chap3.Rmd
@@ -16,7 +16,7 @@ theme_set(theme_classic())
 
 # generate binomial data for linear model
 set.seed(90210)
-N <- 10000
+N <- 1000
 beta <- 2.5
 
 x <- seq(-1, 1, len=N)
@@ -49,7 +49,7 @@ obj <- 1000
 obj.new <- 0
 eps <- 1e-6
 
-# repeat until convergence
+# mode finding for f via Newton's method
 while (abs(obj) > eps) {
     # calculate probability using logistic function
     pi <- as.vector(1 / (1 + exp(-f)))
